<resources>
    <string name="app_name">Jetpack</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">jiezongnewstar</string>
    <string name="nav_header_subtitle">github.com/jiezongnewstar</string>
    <string name="nav_header_desc">header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_lifecycle">LifeCycle</string>
    <string name="menu_livedata">LiveData</string>
    <string name="menu_viewmodel">ViewModel</string>
    <string name="menu_databingding">DataBinding</string>
    <string name="menu_room">Room</string>
</resources>
