<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_lifeCycle"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_lifecycle" />
        <item
            android:id="@+id/nav_liveData"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_livedata" />
        <item
            android:id="@+id/nav_viewModel"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_viewmodel" />
        <item
            android:id="@+id/nav_dataBinding"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_databingding" />
        <item
            android:id="@+id/nav_room"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_room" />
    </group>
</menu>
